Update compliance event and recurring compliance event terminology to be less confusing across models [#98940838]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -270,10 +270,10 @@ en:
   recurring_driver_compliance_form_future_start_rule_time_span: "After a time (1st event will be due based on the schedule you set below)"
   recurring_driver_compliance_form_future_start_schedule: "Future Schedule"
   recurring_driver_compliance_form_future_start_frequency: "Future Frequency"
-  recurring_driver_compliance_form_compliance_date_based_scheduling: "Use Compliance Date Based Scheduling"
-  recurring_driver_compliance_form_compliance_date_based_scheduling_help: "With this checked, only 1 event is scheduled at a time per driver. A new event is scheduled once the last event has been completed, based on the last completion date."
-  recurring_driver_compliance_compliance_date_based_scheduling_heading: "Compliance Date Based"
-  recurring_driver_compliance_form_compliance_date_based_scheduling_heading: "Scheduling Options"
+  recurring_driver_compliance_form_compliance_based_scheduling: "Use Compliance based scheduling"
+  recurring_driver_compliance_form_compliance_based_scheduling_help: "With this checked, only 1 event is scheduled at a time per driver. A new event is scheduled once the last event has been completed, based on the last completion date."
+  recurring_driver_compliance_compliance_based_scheduling_heading: "Compliance Based"
+  recurring_driver_compliance_form_compliance_based_scheduling_heading: "Scheduling Options"
   recurring_driver_compliances_empty: "No recurring driver compliance events exist"
   recurring_driver_compliance_form_creation_notice_heading: "Please note"
   recurring_driver_compliance_form_creation_notice: "New events are not automatically scheduled when this form is saved. Instead they are created by an automated task on the server, typically daily at midnight. You will be able to edit the schedule of this event until the first events are generated. Afterwards, only the event name, event notes, and recurrence notes will be editable."
@@ -281,11 +281,11 @@ en:
   recurring_driver_compliance_form_readonly_notice: "You cannot modify the scheduling of this event since events have already been generated from it. However you can still adjust the recurrence note, event name, and event notes fields. Changes to the latter two fields will be copied to the generated events."
   recurring_driver_compliance_form_submit: "Save"
   recurring_driver_compliance_form_schedule_preview_header:
-    one: "Based on the schedule above and the compliance date based scheduling option, the first event for each driver would be due:"
+    one: "Based on the schedule above and the compliance based scheduling option, the first event for each driver would be due:"
     other: "Based on the schedule above the, first %{count} events for each driver would be due:"
   recurring_driver_compliance_form_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of the schedule."
-  recurring_driver_compliance_form_compliance_date_based_schedule_preview_header: "If a driver were to complete the first occurrence 1 day after the due date, their next event would be due:"
-  recurring_driver_compliance_form_compliance_date_based_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of how compliance date based scheduling works."
+  recurring_driver_compliance_form_compliance_based_schedule_preview_header: "If a driver were to complete the first occurrence 1 day after the due date, their next event would be due:"
+  recurring_driver_compliance_form_compliance_based_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of how compliance based scheduling works."
   recurring_driver_compliance_form_future_schedule_preview_header:
     one: "If a new driver was created 1 day after the first due date, their first event would be due:"
     other: "If a new driver was created 1 day after the first due date, their first %{count} events would be due:"
