Finished frontend integration of recurring_vehicle_maintenance_compliances [#98940838]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -282,7 +282,7 @@ en:
   recurring_driver_compliance_form_submit: "Save"
   recurring_driver_compliance_form_schedule_preview_header:
     one: "Based on the schedule above and the compliance based scheduling option, the first event for each driver would be due:"
-    other: "Based on the schedule above the, first %{count} events for each driver would be due:"
+    other: "Based on the schedule above, the first %{count} events for each driver would be due:"
   recurring_driver_compliance_form_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of the schedule."
   recurring_driver_compliance_form_compliance_based_schedule_preview_header: "If a driver were to complete the first occurrence 1 day after the due date, their next event would be due:"
   recurring_driver_compliance_form_compliance_based_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of how compliance based scheduling works."
@@ -293,6 +293,73 @@ en:
   recurring_driver_compliance_form_future_schedule_on_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of future scheduling using 'On Schedule'"
   recurring_driver_compliance_form_future_schedule_time_span_preview_placeholder_text: "Complete all scheduling and new driver scheduling fields to see an example of future scheduling using 'After a time'"
   recurring_driver_compliance_events_scheduled_heading: "Events Scheduled"
+
+  # Recurring Vehicle Maintenance Compliance Events
+  recurring_vehicle_maintenance_compliances_link_text: "Recurring Vehicle Maintenance Compliance Events"
+  recurring_vehicle_maintenance_compliances_index_heading: "Recurring Vehicle Maintenance Compliance Events"
+  new_recurring_vehicle_maintenance_compliance_link_text: "Create Recurring Event"
+  new_recurring_vehicle_maintenance_compliance_heading: "New Recurring Event"
+  show_recurring_vehicle_maintenance_compliance_heading: "Recurring Event"
+  delete_recurring_vehicle_maintenance_compliance_button: "Delete"
+  delete_recurring_vehicle_maintenance_compliance_incude_incomplete_dependents: "Also delete incomplete vehicle events that were generated from this event?"
+  edit_recurring_vehicle_maintenance_compliance_button: "Edit"
+  edit_recurring_vehicle_maintenance_compliance_heading: "Edit Recurring Event"
+  delete_recurring_vehicle_maintenance_compliance_confirm_button: "Confirm"
+  delete_recurring_vehicle_maintenance_compliance_confirm: "Are you sure?"
+  delete_recurring_vehicle_maintenance_compliance_confirm_heading: "You are about to delete '%{event_name}'"
+  delete_recurring_vehicle_maintenance_compliance_heading: "Delete Recurring Event"
+  recurring_vehicle_maintenance_compliance_form_error:
+    one: "1 error prohibited this recurring event from being saved"
+    other: "%{count} errors prohibited this recurring event from being saved"
+  recurring_vehicle_maintenance_compliance_form_details_header: "Event Details"
+  recurring_vehicle_maintenance_compliance_form_details_header_help: "The event name and event notes will be copied to each generated event."
+  recurring_vehicle_maintenance_compliance_form_event_name: "Event Name"
+  recurring_vehicle_maintenance_compliance_form_event_notes: "Event Notes"
+  recurring_vehicle_maintenance_compliance_recurrence_scheduling_heading: "Repeats every"
+  recurring_vehicle_maintenance_compliance_form_recurrence_schedule_header: "Scheduling"
+  recurring_vehicle_maintenance_compliance_form_recurrence_schedule_header_help: "How often should the event be due, and when should the first occurrence be due?"
+  recurring_vehicle_maintenance_compliance_form_recurrence_type: "Schedule Based On"
+  recurring_vehicle_maintenance_compliance_form_recurrence_schedule: "Schedule"
+  recurring_vehicle_maintenance_compliance_form_recurrence_frequency: "Frequency"
+  recurring_vehicle_maintenance_compliance_form_recurrence_notes: "Recurrence Notes"
+  recurring_vehicle_maintenance_compliance_form_start_date: "First Due Date"
+  recurring_vehicle_maintenance_compliance_form_recurrence_mileage: "Mileage Frequency"
+  recurring_vehicle_maintenance_compliance_recurrence_future_scheduling_heading: "New Vehicle Scheduling"
+  recurring_vehicle_maintenance_compliance_recurrence_future_scheduling_heading_help: "How should scheduling work for vehicles created after the first due date?"
+  recurring_vehicle_maintenance_compliance_form_future_start_rule: "Future Start Rule"
+  recurring_vehicle_maintenance_compliance_form_future_start_rule_immediately: "Immediately (1st event due upon next task generation, typically daily at midnight)"
+  recurring_vehicle_maintenance_compliance_form_future_start_rule_on_schedule: "On Schedule (1st event due according to the the next date in the initial schedule)"
+  recurring_vehicle_maintenance_compliance_form_future_start_rule_time_span: "After a time (1st event will be due based on the schedule you set below)"
+  recurring_vehicle_maintenance_compliance_form_future_start_schedule: "Future Schedule"
+  recurring_vehicle_maintenance_compliance_form_future_start_frequency: "Future Frequency"
+  recurring_vehicle_maintenance_compliance_form_compliance_based_scheduling: "Use Compliance based scheduling"
+  recurring_vehicle_maintenance_compliance_form_compliance_based_scheduling_help: "With this checked, only 1 event is scheduled at a time per vehicle. A new event is scheduled once the last event has been completed, based on the last completion date and/or mileage."
+  recurring_vehicle_maintenance_compliance_compliance_based_scheduling_heading: "Compliance Based"
+  recurring_vehicle_maintenance_compliance_form_compliance_based_scheduling_heading: "Scheduling Options"
+  recurring_vehicle_maintenance_compliances_empty: "No recurring vehicle maintenance compliance events exist"
+  recurring_vehicle_maintenance_compliance_form_creation_notice_heading: "Please note"
+  recurring_vehicle_maintenance_compliance_form_creation_notice: "New events are not automatically scheduled when this form is saved. Instead they are created by an automated task on the server, typically daily at midnight. You will be able to edit the schedule of this event until the first events are generated. Afterwards, only the event name, event notes, and recurrence notes will be editable."
+  recurring_vehicle_maintenance_compliance_form_readonly_notice_heading: "Please note"
+  recurring_vehicle_maintenance_compliance_form_readonly_notice: "You cannot modify the scheduling of this event since events have already been generated from it. However you can still adjust the recurrence note, event name, and event notes fields. Changes to the latter two fields will be copied to the generated events."
+  recurring_vehicle_maintenance_compliance_form_submit: "Save"
+  recurring_vehicle_maintenance_compliance_form_schedule_date_preview_header:
+    one: "Based on the schedule above and the compliance based scheduling option, the first event for each vehicle would be due:"
+    other: "Based on the schedule above, the first %{count} events for each vehicle would be due:"
+  recurring_vehicle_maintenance_compliance_form_schedule_mileage_preview_header:
+    one: "Based on the schedule above and the compliance based scheduling option, and assuming the vehicle has an initial odometer reading of 0 miles, the first event for each vehicle would be due:"
+    other: "Based on the schedule above, and assuming the vehicle has an initial odometer reading of 0 miles, the first %{count} events for each vehicle would be due:"
+  recurring_vehicle_maintenance_compliance_form_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of the schedule."
+  recurring_vehicle_maintenance_compliance_form_compliance_based_schedule_date_preview_header: "If a vehicle were to complete the first occurrence 1 day after the due date, their next event would be due:"
+  recurring_vehicle_maintenance_compliance_form_compliance_based_schedule_mileage_preview_header: "If a vehicle were to complete the first occurrence at 100 miles, their next event would be due:"
+  recurring_vehicle_maintenance_compliance_form_compliance_based_schedule_both_preview_header: "If a vehicle were to complete the first occurrence 1 day after the due date and at 100 miles, their next event would be due:"
+  recurring_vehicle_maintenance_compliance_form_compliance_based_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of how compliance based scheduling works."
+  recurring_vehicle_maintenance_compliance_form_future_schedule_preview_header:
+    one: "If a new vehicle was created 1 day after the first due date, their first event would be due:"
+    other: "If a new vehicle was created 1 day after the first due date, their first %{count} events would be due:"
+  recurring_vehicle_maintenance_compliance_form_future_schedule_immediately_preview_placeholder_text: "Complete all scheduling fields to see an example of future scheduling using 'Immediately'"
+  recurring_vehicle_maintenance_compliance_form_future_schedule_on_schedule_preview_placeholder_text: "Complete all scheduling fields to see an example of future scheduling using 'On Schedule'"
+  recurring_vehicle_maintenance_compliance_form_future_schedule_time_span_preview_placeholder_text: "Complete all scheduling and new vehicle scheduling fields to see an example of future scheduling using 'After a time'"
+  recurring_vehicle_maintenance_compliance_events_scheduled_heading: "Events Scheduled"
 
   # Documents
   driver_documents_heading: "Driver Documentation"
