Provide a way for providers to update the fields they want to require for runs to be considered complete [finishes#98943684]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -475,6 +475,7 @@ en:
   provider_form_dispatch: "Dispatch enabled"
   provider_form_scheduling: "Scheduling"
   provider_form_trip_entry_from_runs: "Allow trip entry from runs page"
+  provider_form_fields_required_for_run_completion: "Fields required for a run to be considered valued"
   provider_form_submit: "Submit"
   provider_index_heading: "Providers"
   provider_index_name: "Name"
@@ -514,6 +515,7 @@ en:
   ambulatory_reimbursement_rate: "Ambulatory Mileage Rate"
   wheelchair_reimbursement_rate: "Wheelchair Mileage Rate"
   submit_reimbursement_rates: "Save Reimbursement Rates"
+  submit_fields_required_for_run_completion: "Save Required Fields"
   no_device_pool: "No device pools yet."
   drivers: "Drivers"
   device_pool_delete_confirm: "Are you sure?"
