--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
   header_content: "<a href='/en' id='logo'>RidePilot</a>"
   #addresses
   address_name: "Address Name"
+  address_nickname: "Nickname"
   building_name: "Building Name"
   address: "Address"
   city: "City"
@@ -62,6 +63,7 @@ en:
   #customers
   customer_details_panel: 'Details'
   customer_addresses_panel: 'Addresses'
+  is_mailing_address: 'Mailing'
   customer_providers_panel: 'Authorized Providers'
   customer_eligibility_panel: 'Eligibility'
   customer_donations_panel: 'Donations'
