--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,7 @@ en:
   address_nickname: "Nickname"
   building_name: "Building Name"
   address: "Address"
+  view_address_details: 'View Details'
   city: "City"
   state: "State"
   zip: "Zip Code"
@@ -42,6 +43,7 @@ en:
   reassociate_trips: "Associate this addresses's trips with another address."
   address_search: "Address Search"
   address_notes: "Notes"
+  must_have_one_address: 'Must have at least one address'
   #cab trips
   cab: 'Cab'
   pickup_date: "Pickup Date"
