[#100023134] added is_elderly checkbox to customers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,6 +79,7 @@ en:
   alternate_phone: "Alternate Phone"
   email: "Email"
   date_of_birth: "Date of Birth"
+  is_elderly: 'Elderly?'
   ethnicity: "Ethnicity"
   mobility: "Mobility"
   mobility_notes: "Mobility Notes"
