[fixes#103266442] append name to run table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -990,6 +990,7 @@ en:
   to_date: 'To Date'
   from_date_cannot_later_than_to_date: "From Date can not be later than To Date"
   # runs table
+  run_name_column: 'Name'
   run_date_column: 'Date'
   run_start_time_column: 'Start Time'
   run_end_time_column: 'End Time'
