--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@ en:
   state: "State"
   zip: "Zip Code"
   phone_number: "Phone Number"
-  in_district: "In TriMet District"
+  in_district: "In UTA District"
   unspecified: "Unspecified"
   "yes": "Yes" # yes, no: needs to put as string, otherwise won't be loaded as will be parsed as {false=>"No"}
   "no": "No"
