--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -695,6 +695,9 @@ en:
   donation_report_heading: "Reports: Donations"
   donation_report_submit: "Report"
   total_donations: "Total Donations"
+  donation_date: 'Date'
+  donation_amount: 'Amount'
+  donation_notes: 'Notes'
   total: "Total"
   reports_heading: "Reports"
   service_summary_link_text: "Service Summary"
