[#103501340] Show inactivated customer profile with option to Activate it

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,6 +140,7 @@ en:
   cancel: "Cancel"
   back: "Back"
   inactivate: "Inactivate"
+  activate: "Activate"
   submit: "Submit"
   previous: "Previous"
   next: "Next"
