[#103501342] User can switch between active customers and all customers, the search and letter indexing functions are adjusted accordingly based on active or all customers

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,6 +107,7 @@ en:
   inactivation_reason: "Inactivation Reason"
   editing_customer: "Editing Customer: %{customer_name}"
   customer_listing: "Customers"
+  active_customer_listing: "Active Customers"
   new_customer: "New Customer"
   new_trip_for_customer: "New Trip for This Customer"
   duplicate: "Duplicate"
