--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -925,6 +925,7 @@ en:
   vehicle_form_responsible_party_label: "Responsible Party"
   vehicle_form_registration_expiration_date_label: "Registration Exp Date"
   vehicle_form_seating_capacity_label: "Seating Capacity"
+  vehicle_form_mobility_device_accommodations_label: "Mobility Devices Accommodated"
   vehicle_form_accessibility_equipment_label: "Accessibility Equipment"
   vehicle_form_details_heading: "Details"
   vehicle_form_information_heading: "Additional Information"
