--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -698,6 +698,8 @@ en:
   donation_date: 'Date'
   donation_amount: 'Amount'
   donation_notes: 'Notes'
+  add_donation: 'Add'
+  add_donation_dialog_title: 'Add Donation' 
   total: "Total"
   reports_heading: "Reports"
   service_summary_link_text: "Service Summary"
