Change OperatingHours to a concern so be shared by Driver and Provider; User can now configure provider operating hours; Trip cannot be created when provider is not available

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -594,6 +594,9 @@ en:
   min_trip_time_gap_in_mins_text: 'Configure the default time gap between trip pickup and appointment times (mins)'
   min_trip_time_gap_in_mins_label: 'Time gap (in minutes)'
   update_min_trip_time_gap: 'Update'
+  configure_provider_operating_hours: 'Configure Operating Hours'
+  update_provider_operating_hours: 'Update'
+  provider_not_available_for_trip: 'Provider is not available for the trip.'
   #reports
   service_performed: "Service Performed"
   odometer_reading: "Odometer Reading"
@@ -876,6 +879,7 @@ en:
   assignment: 'Assignment'
   n_a: 'N/A'
   view: 'View'
+  trip_form_error_message: 'Please correct following errors'
   #trips table
   pickup_date_column: 'Pickup Date'
   customer_column: 'Customer'
