--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -480,7 +480,7 @@ en:
   #trips validation erros
   driver_is_valid_for_vehicle_validation_error: "is not the driver for the selected vehicle during this vehicle's run."
   vehicle_has_open_seating_capacity_validation_error: "There's not enough open capacity on this run to accommodate this trip"
-  completable_until_day_of_trip_validation_error: "cannot be set as complete until day of the trip"
+  completable_until_trip_appointment_time_validation_error: "cannot be set as complete until end time of the trip"
   #monthlies
   monthlies_start_date: "Month"
   funding_source: "Funding Source"
