Add provider authentication API

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1080,8 +1080,9 @@ en:
   ridepilot_token_required: 'Ridepilot token is required.'
   invalid_ridepilot_token: 'Ridepilot token is not valid.'
   customer_token_label: 'Token'
-  customer_not_exist: 'Customer does not exist.'
+  customer_not_exist: 'Customer does not exist based on given id and token.'
   unauthorized_customer_for_provider: 'Customer is not authorized to access given provider.'
+  provider_not_exist: 'Provider does not exist based on given id.'
 
   locales:
     en: "English"
