Add APIs for create_trip, cancel_trip, trip_status

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1083,6 +1083,11 @@ en:
   customer_not_exist: 'Customer does not exist based on given id and token.'
   unauthorized_customer_for_provider: 'Customer is not authorized to access given provider.'
   provider_not_exist: 'Provider does not exist based on given id.'
+  unauthorized_customer_for_trip: 'Customer is not authorized to access given trip.'
+  trip_has_been_scheduled: 'Your trip has been scheduled.'
+  trip_has_been_scheduled_to_cab: 'Your trip has been scheduled to a cab.'
+  trip_has_been_booked: 'Your trip has been booked.'
+  trip_purpose_not_exist: 'Trip purpose does not exist for given provider.'
 
   locales:
     en: "English"
