--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -485,6 +485,8 @@ en:
   vehicle_has_open_seating_capacity_validation_error: "There's not enough open capacity on this run to accommodate this trip"
   completable_until_trip_appointment_time_validation_error: "cannot be set as complete until end time of the trip"
   vehicle_has_mobility_device_capacity_validation_error: "There's not enough mobility device capacity on this run to accommodate this trip"
+  outbound_trip_dropoff_time_no_later_than_return_trip_pickup_time: "Dropoff time should be no later than return trip's pickup time"
+  return_trip_pickup_time_no_earlier_than_outbound_trip_dropoff_time: "Pickup time should be no earlier than outbound trip's appointment time"
   #monthlies
   monthlies_start_date: "Month"
   funding_source: "Funding Source"
