Rephrase address validtion error: remove length validtion on address component fields, but add an overall validation against address text

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,7 @@ en:
   address_notes: "Notes"
   must_have_one_address: 'Must have at least one address'
   create_provider_address_text: 'Create Address'
+  address_text_required: 'Address is required.'
   #cab trips
   cab: 'Cab'
   pickup_date: "Pickup Date"
