--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,7 +46,7 @@ en:
   address_notes: "Notes"
   must_have_one_address: 'Must have at least one address'
   create_provider_address_text: 'Create Address'
-  address_text_required: 'Address is required.'
+  full_address_text_required: 'is required'
   #cab trips
   cab: 'Cab'
   pickup_date: "Pickup Date"
