--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
   must_have_one_address: 'Must have at least one address'
   create_provider_address_text: 'Create Address'
   geocode_address_required: 'A geocoded address is required, please type and select an address in the Address field'
+  same_address_exists_for_customer: 'Same address was created for the customer. Please click Edit Details to edit it if needed.'
   #cab trips
   cab: 'Cab'
   pickup_date: "Pickup Date"
