--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,7 +138,10 @@ en:
   edit_value: "Edit Value"
   hide_value: 'Hide Value'
   show_value: 'Show Value'
-  value: "Value"
+  value: 'Value'
+  add_lookup_table_value: "Value"
+  add_lookup_table_code: "Code"
+  add_lookup_table_description: "Description"
   key: "Key"
   confirm_hide_lookup_value_message: 'Are you sure to change %{value} to be invisible?'
   confirm_show_lookup_value_message: 'Are you sure to change %{value} to be visible?'
