--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -145,6 +145,9 @@ en:
   key: "Key"
   confirm_hide_lookup_value_message: 'Are you sure to change %{value} to be invisible?'
   confirm_show_lookup_value_message: 'Are you sure to change %{value} to be visible?'
+  lookup_table_error_message:
+    one: "%{count} error prohibited this lookup table from being saved:"
+    other: "%{count} errors prohibited this lookup table from being saved:"
   #Shared
   site_title: "Ridepilot"
   new_trip: "New Trip"
