--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -495,7 +495,7 @@ en:
   vehicle_has_mobility_device_capacity_validation_error: "There's not enough mobility device capacity on this run to accommodate this trip"
   outbound_trip_dropoff_time_no_later_than_return_trip_pickup_time: "Dropoff time should be no later than return trip's pickup time"
   return_trip_pickup_time_no_earlier_than_outbound_trip_dropoff_time: "Pickup time should be no earlier than outbound trip's appointment time"
-  violate_provider_min_time_gap: 'The gap between drop off time and pick up time violates the minimum gap setting by the provider'
+  violate_provider_min_time_gap: 'The gap between drop off time and pick up time violates the minimum gap setting (%{min_gap} minutes) by the provider (%{provider_name})'
   #monthlies
   monthlies_start_date: "Month"
   funding_source: "Funding Source"
@@ -826,6 +826,7 @@ en:
       other: "%{count} errors prohibited this record from being saved:"
   #trips
   trip: 'Trip'
+  trip_provider: 'Provider'
   trip_direction: 'Direction'
   drive_distance: 'Drive Distance'
   return_trip: 'Return'
